- migrate image-with-icon.less new CSS to style v2.

--- a/RockWeb/Styles/style-v2/rock-components/_image-with-icon.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_image-with-icon.scss
@@ -15,6 +15,7 @@
     background-position: center;
     background-size: cover;
     border-radius: var(--rounded-small);
+    background-color: var(--color-interface-softer);
 
     .icon-stack-container {
         position: absolute;
