--- a/RockWeb/Styles/style-v2/rock-components/_tags.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_tags.scss
@@ -238,7 +238,7 @@
 }
 
 .tag-letterlist {
-  color:              var(--color-danger-strong);
+  color:              var(--color-interface-stronger);
 
   li {
     margin-right:     var(--spacing-medium);
