--- a/RockWeb/Styles/style-v2/utilities/_borders.scss
+++ b/RockWeb/Styles/style-v2/utilities/_borders.scss
@@ -38,7 +38,7 @@
 }
 
 .border-panel {
-  border-color: var(--color-interface-softer) !important;
+  border-color: var(--color-interface-soft) !important;
 }
 
 
