--- a/RockWeb/Styles/style-v2/blocks/_skeleton.scss
+++ b/RockWeb/Styles/style-v2/blocks/_skeleton.scss
@@ -9,7 +9,7 @@
 
 .skeleton.skeleton-block {
   height:         50px;
-  border-radius:  4px;
+  border-radius:  var(--rounded-xsmall);
 }
 
 .skeleton.skeleton-block + .skeleton-block {
