--- a/RockWeb/Styles/style-v2/core.scss
+++ b/RockWeb/Styles/style-v2/core.scss
@@ -55,7 +55,7 @@
 @import 'components/tables';                // Fully Format. Really hard to read. There are Some hard coded value. Have to be under forms.scss to override checkbox positioning.
 @import 'components/input-groups';          // Fully Format. There are Some hard coded value.
 @import 'components/bootstrap-chosen';
-@import 'components/jcrop.scss';
+@import 'components/jcrop.scss';            // Minified File.
 @import 'components/breadcrumbs';           // Fully Format.
 @import 'components/thumbnails';            // Fully Format.
 @import 'components/scaffolding';           // Fully Format. There are Some hard coded value.
@@ -160,4 +160,5 @@
 /* ======================= ICON  ======================*/
 @import './icons/core-icon';                //Fully Format.
 @import './font-styling/font-styling-core'  //Fully Format.
+
 
