--- a/RockWeb/Styles/style-v2/core/_scroll.scss
+++ b/RockWeb/Styles/style-v2/core/_scroll.scss
@@ -24,7 +24,7 @@
     position:   relative;
     padding:    0;
     background-color: var(--color-interface-soft);
-    border-radius:    4px;
+    border-radius:    var(--rounded-xsmall);
   }
 
   .thumb {
@@ -88,7 +88,7 @@
   margin: 0;
 
   .viewport {
-    width: 100%;
+    width:      100%;
     min-height: 200px;
   }
 
@@ -96,7 +96,7 @@
     position:   relative;
     width:      100%;
     height:     15px;
-    padding:    0 15px;
+    padding:    0 var(--spacing-medium);
   }
 
   .track {
@@ -130,14 +130,14 @@
     height:             8px;
     // Commented out to remove the scroll bar on "Group Scheduler" & "Connection Request Board" Block
     background-color: var(--color-interface-softer);
-    border-radius:      4px;
+    border-radius:      var(--rounded-xsmall);
   }
 
   & ::-webkit-scrollbar-thumb {
     width:              8px;
     // Commented out to remove the scroll bar on "Group Scheduler" & "Connection Request Board" Block
     background-color:   var(--color-interface-soft);
-    border-radius:      4px;
+    border-radius:      var(--rounded-xsmall);
 
     &:hover {
       background-color: var(--color-interface-medium);
