--- a/RockWeb/Styles/style-v2/rock-components/_kpi.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_kpi.scss
@@ -243,7 +243,7 @@
   font-size:                30px;
 
   .kpi-stat {
-    padding:                var(--spacing-medium) 10px;
+    padding:                var(--spacing-medium) var(--spacing-large);
   }
 
   .kpi-label {
