--- a/RockWeb/Styles/style-v2/rock-components/_person-program-step.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_person-program-step.scss
@@ -205,7 +205,7 @@
   left:         0;
   width:        100%;
   height:       100%;
-  font-size:    28px;
+  font-size:    var(--font-size-h3);
   background:   var(--color-interface-softest);
   -webkit-transform-style:  preserve-3d;
   -moz-transform-style:     preserve-3d;
