--- a/RockWeb/Styles/style-v2/rock-components/_progress-tracker.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_progress-tracker.scss
@@ -6,7 +6,7 @@
 // =============================================================
 // Table of Content           
 //  + Base Style  
-//  + Remainding
+//  + REMAINING
 // =============================================================
 
 
@@ -64,7 +64,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  padding: 6px 12px 6px var(----spacing-small);
+  padding: var(--spacing-xsmall) var(--spacing-small) var(--spacing-xsmall) var(----spacing-small);
   font-size: .875rem;
   font-weight: var(--font-weight-medium);
   line-height: 1.25;
@@ -104,7 +104,7 @@
   min-width: 56px;
 
   .progress-step-link {
-    padding: var(--spacing-tiny) 14px;
+    padding: var(--spacing-tiny) var(--spacing-medium);
     font-size: var(--font-size-h4);
   }
 
@@ -139,13 +139,13 @@
 // ====================== END BASE STYLE ======================
 
 
-// ======================== REMAINDING ========================
+// ======================== REMAINING ========================
 .remaining-time {
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 6px 20px;
+  padding: var(--spacing-xsmall) var(--spacing-large);
   margin-left: auto;
   text-align: center;
   border-left: 1px solid var(--color-interface-softer);
@@ -164,7 +164,7 @@
   line-height: 1;
   color: var(--color-primary);
 }
-// ====================== END REMAINDING ======================
+// ====================== END REMAINING ======================
 
 
 
