--- a/RockWeb/Styles/style-v2/rock-components/_range-slider.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_range-slider.scss
@@ -19,7 +19,7 @@
     .irs {
         position:              relative;
         display:               block;
-        height:               55px;
+        height:                55px;
         -webkit-user-select:   none;
         -khtml-user-select:    none;
         -moz-user-select:      none;
@@ -29,9 +29,9 @@
     }
 
     .irs-line {
-        position:              relative;
+        position:             relative;
         top:                  33px;
-        display:               block;
+        display:              block;
         height:               10px;
         overflow:             hidden;
         background:           var(--color-interface-soft);
@@ -42,10 +42,10 @@
     .irs-line-left,
     .irs-line-mid,
     .irs-line-right {
-        position:              absolute;
-        top:                  0;
-        display:               block;
-        height:               8px;
+        position:               absolute;
+        top:                    0;
+        display:                block;
+        height:                 8px;
     }
 
     .irs-line-left {
@@ -64,11 +64,11 @@
     }
     
     .irs-bar {
-        position:              absolute;
-        top:                  33px;
+        position:             absolute;
+        top:                 33px;
         left:                 0;
-        display:               block;
-        width:                 0;
+        display:              block;
+        width:                0;
         height:               10px;
         background:           var(--color-primary, #428bca);
         border-top:           1px solid var(--color-primary, #428bca);
@@ -76,15 +76,15 @@
     }
 
     .irs-bar-edge {
-        position:              absolute;
+        position:             absolute;
         top:                  33px;
         left:                 0;
-        display:               block;
+        display:              block;
         width:               14px;
-        height:               10px;
+        height:              10px;
         background:           var(--color-primary, #428bca);
         border-right:         0;
-        border-radius:        16px 0 0 16px;
+        border-radius:        var(--rounded-xlarge) 0 0 var(--rounded-xlarge);
     }
     
     .irs-shadow {
@@ -127,7 +127,7 @@
         top:                  0;
         display:               block;
         padding:              1px 5px;
-        font-size:            12px;
+        font-size:            var(--font-size-xsmall);
         line-height:          1.333;
         color:                #333;
         text-shadow:          none;
@@ -152,9 +152,9 @@
         left:                 0;
         display:               block;
         padding:              1px 5px;
-        font-size:           14px;
+        font-size:           var(--font-size-small);
         line-height:          1.333;
-        color:                #fff;
+        color:                var(--color-interface-softest);
         text-shadow:          none;
         white-space:          nowrap;
         cursor:               default;
@@ -200,7 +200,7 @@
         position:              absolute;
         bottom:               5px;
         left:                 0;
-        padding:              0 3px;
+        padding:              0 var(--spacing-tiny);
         font-size:           9px;
         line-height:          9px;
         color:                #99a4ac;
@@ -255,6 +255,6 @@
     
     .lt-ie9 .irs-min,
     .lt-ie9 .irs-max {
-        background:           #ccc;
+        background:           var(--color-interface-soft);
     }
 }
