--- a/RockWeb/Styles/style-v2/utilities/_card.scss
+++ b/RockWeb/Styles/style-v2/utilities/_card.scss
@@ -10,7 +10,7 @@
   word-wrap: break-word;
   background-color: var(--color-interface-softest);
   background-clip: border-box;
-  border: 1px solid var(--color-interface-softer);
+  border: 1px solid var(--color-interface-soft);
   border-radius: var(--rounded-small);
 
   > hr {
