- Continue Polishing style-v2.

--- a/RockWeb/Styles/style-v2/core.scss
+++ b/RockWeb/Styles/style-v2/core.scss
@@ -126,6 +126,7 @@
 @import 'rock-components/html-editor';
 @import 'rock-components/ant-select';
 @import 'rock-components/profile';
+@import 'rock-components/connection-request.scss';
 
 
 /* ===================== BLOCK =================== */
