--- a/RockWeb/Blocks/Examples/prettify.css
+++ b/RockWeb/Blocks/Examples/prettify.css
@@ -35,8 +35,8 @@
 pre.prettyprint { 
     padding: 9px 14px;
     margin-top: 14px;
-    background-color: #f7f7f9;
-    border: 1px solid #e1e1e8;
+    background-color: var(--color-interface-softer);
+    border: 1px solid var(--color-interface-soft);
     border-radius: 4px;
 }
 
