--- a/RockWeb/Styles/style-v2/rock-components/_image-cropper.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_image-cropper.scss
@@ -18,7 +18,7 @@
   .image-container {
     width: 150px;
     height: 150px;
-    border: 3px solid var(--color-interface-softer);
+    border: 3px solid var(--color-interface-soft);
   }
 
   .options {
