--- a/RockWeb/Themes/RockV2/Styles/theme.scss
+++ b/RockWeb/Themes/RockV2/Styles/theme.scss
@@ -14,7 +14,7 @@
 }
 
 html {
-  -ms-overflow-style: scrollbar; // need for IE 10 issue with scrollbars being on TOP of the content
+  -ms-overflow-style: scrollbar; // need for IE 10 issue with scrollbar being on TOP of the content
   -webkit-font-smoothing: antialiased;
 }
 
@@ -332,7 +332,7 @@ $navbar-element-height: 40px;
     padding: 0;
     margin: 0;
     font-size: .875em;
-    border: 0;
+    border: 1px solid var(--color-interface-soft);
 
     @media (min-width: $screen-small) {
       height: $navbar-element-height;
@@ -589,7 +589,7 @@ $navbar-element-height: 40px;
           margin-right: 14px;
           margin-bottom: 1px;
           content: " ";
-          background-color: var(--color-interface-soft);
+          background-color: transparent;
           border-radius: 100px;
         }
 
