- Fixed issue preventing selecting a prior ability level once a later one has been selected.

--- a/RockWeb/Styles/Blocks/Checkin/CheckInKiosk.css
+++ b/RockWeb/Styles/Blocks/Checkin/CheckInKiosk.css
@@ -36,6 +36,10 @@
     font-weight: var(--font-weight-semibold);
 }
 
+.check-in-page .btn.btn-dimmed {
+    opacity: 0.33;
+}
+
 .check-in-page .button-list {
     display: flex;
     flex-direction: column;
