- Fix NextGen Checkin Button Sizes are a bit large

--- a/RockWeb/Styles/Blocks/Checkin/CheckInKiosk.css
+++ b/RockWeb/Styles/Blocks/Checkin/CheckInKiosk.css
@@ -188,7 +188,7 @@
 
 .check-in-page .btn-default {
     padding: var(--spacing-xsmall) var(--spacing-medium);
-    font-size: var(--font-size-h3);
+    font-size: var(--font-size-regular);
     font-weight: var(--font-weight-regular);
 }
 
@@ -270,7 +270,7 @@
 }
 
 .check-in-page .actions .btn.btn-primary.next-button {
-    font-size: var(--font-size-h3);
+    font-size: var(--font-size-regular);
     padding: var(--spacing-xsmall) var(--spacing-xlarge);
 }
 
@@ -584,6 +584,10 @@
     gap: var(--spacing-tiny);
 }
 
+.achievement .header .subtitle {
+    min-width: 50px;
+}
+
 .check-in-page .attendance-card .achievement .header {
     display: flex;
     justify-content: space-between;
@@ -750,4 +754,32 @@ ul li::marker {
 
 .grid-obsidian .grid-body .grid-row .btn.btn-default {
     padding: var(--spacing-xsmall) 0px;
+}
+
+.check-in-page .check-in-panel.page-footer .title {
+    display: none;
+}
+
+@media screen and (min-width: 576px) {
+    .check-in-page .actions .btn.btn-primary.next-button {
+        font-size: var(--font-size-regular);
+    }
+
+    .check-in-page .btn-default {
+        font-size: var(--font-size-regular);
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .check-in-page .actions .btn.btn-primary.next-button {
+        font-size: var(--font-size-h4);
+    }
+
+    .check-in-page .btn-default {
+        font-size: var(--font-size-h4);
+    }
+
+    .check-in-page .check-in-panel.page-footer .title {
+        display: block;
+    }
 }
