- CSS Variables Update.

--- a/RockWeb/Styles/_rock-core.less
+++ b/RockWeb/Styles/_rock-core.less
@@ -101,12 +101,13 @@
   --line-height-compact: 1.055;
 
   /* SPACING */
-  --spacing-tiny: 4px;
-  --spacing-small: 8px;
-  --spacing-medium: 16px;
-  --spacing-large: 24px;
-  --spacing-xlarge: 48px;
-  --spacing-huge: 80px;
+  --spacing-tiny:       4px;
+  --spacing-xsmall:     8px;
+  --spacing-small:     12px;
+  --spacing-medium:    16px;
+  --spacing-large:     24px;
+  --spacing-xlarge:    48px;
+  --spacing-huge:      80px; 
 
   /* BORDER RADIUS */
   --rounded-tiny: 2px;
